--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "spectacle-code-slide": "^0.5.2",
     "spectacle-scripts": "2.0.0"
   },
   "scripts": {
